# upmemo

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
change log/: v0.1.1.md  v0.1.2.md
change_log/: v0.1.3.md
src/: api.ts  archive.ts  constants.ts  dom.ts  font.ts  history.ts  image.ts  index.html  linkify.ts  main.ts  preview.html  preview.ts  settings.ts  shortcut.ts  stickyNotes.ts  storage.ts  styles.css  theme.ts  trash.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
